--- a/slideactionview/build.gradle
+++ b/slideactionview/build.gradle
@@ -19,6 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    
+    libraryVariants.all {
+        generateBuildConfig.enabled = false
+    }
 
     resourcePrefix 'slideactionview_'
 }
