--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,20 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
+    }
+}
+
 android {
-    compileSdkVersion 30
+    namespace = "com.ageet.slideactionview.demo"
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.ageet.slideactionview.demo"
-        minSdkVersion 19
-        targetSdkVersion 30
+        minSdk 19
+        targetSdk 33
         versionCode 1
         versionName "1.0"
     }
@@ -23,5 +30,5 @@ android {
 dependencies {
     implementation project(':slideactionview')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "androidx.appcompat:appcompat:1.6.1"
 }
